Fix main nav chevron icon alignment in Firefox (#326)
* fixes #323 - aligns selectors in navbar in Firefox

--- a/client/modules/core/css/core.css
+++ b/client/modules/core/css/core.css
@@ -29,7 +29,8 @@ li.treeview > a > span::after {
   font-size: 10px;
   font-weight: 300;
   padding-right: 10px;
-  float: right;
+  position: absolute;
+  right: 0px;
   content: '\f078';
 }
 
